--- a/puzzle/pom.xml
+++ b/puzzle/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>ru.job4j</groupId>
-        <artifactId>junior</artifactId>
-        <version>2.0</version>
+        <artifactId>job4j</artifactId>
+        <version>3.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>puzzle</artifactId>
