--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>puzzle</module>
         <module>chapter_002</module>
         <module>chapter_003</module>
+        <module>chapter_004</module>
     </modules>
 
     <properties>
